--- a/TurtlesInformational/appsettings.json
+++ b/TurtlesInformational/appsettings.json
@@ -1,8 +1,10 @@
 {
+  "ConnectionStrings": {
+    "turtles": "Server=localhost;Database=turtles;uid=root;Pwd=password;Port=3306;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
